mark: more playing around with stuff. Adding build-forest script to help with some parallelisation